[package]
name = "functional"
version = "0.1.0"
authors = ["Yan Couto <yancouto@gmail.com>"]
edition = "2018"
default-run = "functional"

[features]
default = ["bracket-lib/opengl", "steam"]
curses = ["bracket-lib/curses"]
crossterm = ["bracket-lib/crossterm"]
steam = ["steamworks"]

[build-dependencies]
jsonnet-rs = "0.17.0"
build-deps = "0.1"

[dependencies]
structopt = { version = "0.3", default-features = false }
lazy_static = "1"
serde_yaml = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
directories = "3"
log = "0.4"
simplelog = "0.10.0"
vec1 = "1"
savefile = "0.7"
savefile-derive = "0.7"
parking_lot = "0.11"
thiserror = "1"
xi-core-lib = "0.3"
xi-rpc = "0.3"
crossbeam = "0.8"
maplit = "1.0.2"
strum = { version = "0.20", features = ["derive"] }
clipboard = "0.5"
derivative = "2"
rayon = "1"
textwrap = { version = "0.13", default-features = false }
# I have some unmerged additions to this crate
steamworks = { git = "https://github.com/yancouto/steamworks-rs", optional = true }

[dependencies.bracket-lib]
version = "0.8.1"
default-features = false
