[package]
name = "functional"
version = "0.1.0"
authors = ["Yan Couto <yancouto@gmail.com>"]
edition = "2018"
default-run = "functional"

[features]
default = ["bracket-lib/opengl", "steam"]
curses = ["bracket-lib/curses"]
crossterm = ["bracket-lib/crossterm"]
steam = ["steamworks"]

[build-dependencies]
jsonnet-rs = "0.17"
build-deps = "0.1"

[dependencies]
structopt = { version = "0.3", default-features = false }
lazy_static = "1"
serde_yaml = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
directories = "3"
log = "0.4"
simplelog = "0.10.0"
vec1 = {version = "1", features = ["serde"]}
savefile = "0.7"
savefile-derive = "0.7"
parking_lot = "0.11"
thiserror = "1"
xi-core-lib = "0.3"
xi-rpc = "0.3"
crossbeam = "0.8"
maplit = "1.0.2"
strum = { version = "0.21", features = ["derive"] }
clipboard = "0.5"
derivative = "2"
rayon = "1"
textwrap = { version = "0.13", default-features = false }
bmp = "0.5"
jsonnet-rs = "0.17"
more-asserts = "0.2"
enum-map = "1"
rand = "0.8"
# Until https://github.com/nickbrowne/ears/pull/20 is merged
ears = { git = "https://github.com/yancouto/ears" }
# Needs to be same version as on bracket-lib
winit = "0.24.0"
# I have some unmerged additions to this crate
steamworks = { git = "https://github.com/yancouto/steamworks-rs", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"
tempfile = "3"

[dependencies.bracket-lib]
version = "0.8.1"
default-features = false
