[package]
name = "functional"
version = "1.1.0"
authors = ["Yan Couto <yancouto@gmail.com>"]
edition = "2018"
default-run = "functional"

[features]
default = ["bracket-lib/opengl", "steam", "audio", "clipboard"]
curses = ["bracket-lib/curses"]
crossterm = ["bracket-lib/crossterm"]
steam = ["steamworks"]
demo = []
audio = ["ears"]
clipboard = ["dep:clipboard"]

[build-dependencies]
jsonnet-rs = "0.17"
build-deps = "0.1"

[dependencies]
structopt = { version = "0.3", default-features = false }
lazy_static = "1"
serde_yaml = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
directories = "3"
log = "0.4"
simplelog = "0.10.0"
vec1 = {version = "1", features = ["serde"]}
savefile = "0.16"
savefile-derive = "0.16"
parking_lot = {version = "*", features = ["nightly"]}
thiserror = "1"
xi-core-lib = "0.3"
xi-rpc = "0.3"
crossbeam = "0.8"
maplit = "1.0.2"
strum = { version = "0.21", features = ["derive"] }
clipboard = {version = "0.5", optional = true }
derivative = "2"
rayon = "1"
textwrap = { version = "0.13", default-features = false }
bmp = "0.5"
jsonnet-rs = "0.17"
more-asserts = "0.2"
enum-map = "1"
rand = "0.8"
# Until https://github.com/nickbrowne/ears/pull/20 is merged
ears = { git = "https://github.com/yancouto/ears", optional = true }
# Needs to be same version as on bracket-lib
winit = "0.27"
# I have some unmerged additions to this crate
steamworks = { git = "https://github.com/Noxime/steamworks-rs", rev = "a204e81084c50490160123d6eaadbc4f509b276d", optional = true }
#steamworks = { version = "0.10", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"
tempfile = "3"

[dependencies.bracket-lib]
version = "0.8.1"
default-features = false
